fixed flicker on animation

--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -61,6 +61,7 @@ section {
   border-radius: 1rem;
   color: black;
   margin-bottom: 5rem;
+  visibility: hidden;
 }
 
 .three {
